--- a/views/users/favorite.pug
+++ b/views/users/favorite.pug
@@ -37,3 +37,22 @@ block content
                 //- |
                 //- a.btn.btn-sm.btn-outline-dark(href=`/competitions/${competition.id}/survey`) Survey Result
     br
+
+
+        //- h3
+    //-   | My Favorite
+    //- br
+    //- table.table.table-hover
+    //-   thead
+    //-     tr
+    //-       th Title
+    //-       th Location
+    //-       th Start Time
+
+    //-   tbody
+    //-     each favorite in favorites
+    //-       tr
+    //-         td 
+    //-           a(href=`/competitions/${favorite._id}`)= favorite.title
+    //-           td= favorite.location
+    //-           td= favorite.startTime
