--- a/views/index.pug
+++ b/views/index.pug
@@ -125,7 +125,7 @@ block content
                 li.nav-item
                   a.nav-link(href='competitions?term=Deadline imminent')  마감 임박
                 li.nav-item
-                  a.nav-link.disabled(href='competitions?term=Deadlines')  마감
+                  a.nav-link.disabled(href='competitions?term=Deadline')  마감
               form.form-inline.my-2.my-lg-0(action='/competitions', method='GET')
                 input.form-control.mr-sm-2(type='text', name='term', placeholder='Search Competition', aria-label='Search', value=term)   
                 button.btn.btn-warning.my-2.my-sm-0(type='submit') Search 
