--- a/views/competitions/show.pug
+++ b/views/competitions/show.pug
@@ -88,56 +88,18 @@ block content
           button.btn.btn-outline-primary.competition-like-btn(data-id=competition.id) 
             span.for-loading #[i.fa.fa-spin.fa-refresh] Loading
             span #[i.fa.fa-thumbs-up] Like
+          button.btn.btn-outline-info.competition-unlike-btn(data-id=competition.id) 
+            span.for-loading #[i.fa.fa-spin.fa-refresh] Loading
+            span #[i.fa.fa-thumbs-down] unLike
           |
           |
           |
-          button.a.btn.btn-outline-success(href=`/competitions/${competition._id}/favorite`)
-            i.fas.fa-heart
-            | &nbsp; favorite
-
-          button.a.btn.btn-outline-dark(href=`/competitions/${competition._id}/favorite` type='button', data-toggle='modal', data-target='#exampleModal', data-whatever='@mdo')
+          button.a.btn.btn-outline-success.competition-favorite-btn(data-id=competition.id, onclick= "alert('북마크 되었습니다. 내 보관함으로 가보세요 ^_^')") 
+            span #[i.fa.fas.fa-heart] favorite
+          button.a.btn.btn-outline-dark.competition-report-btn(type='button' data-toggle="modal" data-target="#report") 
             i.fas.fa-bomb
             | &nbsp; Report competition
-          #exampleModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='exampleModalLabel', aria-hidden='true')
-            .modal-dialog(role='document')
-              .modal-content
-                .modal-header
-                  h5#exampleModalLabel.modal-title 신고하기
-                  button.close(type='button', data-dismiss='modal', aria-label='Close')
-                    span(aria-hidden='true') ×
-                .modal-body
-                  form
-                    .form-group
-                      label.col-form-label(for='recipient-content') 공모전 이름:
-                      h5.m.title(stype = 'color:black')= competition.title
-                  
-       
-                    .form-group
-                      label.col-form-label(for='message-text') 신고 사유:
-                        |
-                        br
-                        .form-check
-                          input#exampleRadios1.form-check-input(type='radio', name='exampleRadios', value='option1', checked='')
-                          label.form-check-label(for='exampleRadios1')
-                            | 부적절한 홍보 게시물
-                        .form-check
-                          input#exampleRadios2.form-check-input(type='radio', name='exampleRadios', value='option2')
-                          label.form-check-label(for='exampleRadios2')
-                            | 음란성
-                        .form-check
-                          input#exampleRadios3.form-check-input(type='radio', name='exampleRadios', value='option3', disabled='')
-                          label.form-check-label(for='exampleRadios3')
-                            | 특정인 대상의 비망/욕설
-                        .form-check
-                          input#exampleRadios3.form-check-input(type='radio', name='exampleRadios', value='option4', disabled='')
-                          label.form-check-label(for='exampleRadios3')
-                            | 저작권 침해
-                .modal-footer
-                  button.btn.btn-secondary(type='button', data-dismiss='modal') 취소
-                  button.btn.btn-primary(type='button') 신고
-
-
-
+          include _report.pug
                       //- if (competition.author && competition.author.id == currentUser.id && currentUser.email == 'admin@gmail.com')
           if (competition.author.id == currentUser.id || currentUser && currentUser.email == 'admin@gmail.com')
             | 
@@ -181,23 +143,3 @@ block content
   script(src='/javascripts/competition_client.js')
 
 
-
-//- .form-group
-//-   label.col-form-label(for='recipient-name') 작성자:
-//-   input#recipient-name.form-control(type='text')
-//- .form-group
-//-   label.col-form-label(for='recipient-content') 공모전 이름:
-//-     h5.main-title= competition.title
-//- input#recipient-name.form-control(type='text')
-//-         |
-//- a(href='' onclick="alert('북마크 되었습니다')")
-//-       //- btn.btn-outline-success(href=`/competitions/${competition._id}/favorite`) 
-//-   i.fas.fa-heart.competition-icon(aria-hidden='true', data-id=competition._id)
-//-   | &nbsp; Favorite
-//- |
-//- |
-//-           //- a(href='' onclick="alert('북마크 되었습니다')")
-//-           //-   i.fa.fa-bookmark-o.competition-icon(aria-hidden='true', data-id=competition._id)
-//-       //- a.btn.btn-outline-dark(href='#' onclick="alert('북마크 되었습니다')") 
-//-       //-   i.fas.fa-heart.competition-icon(aria-hidden='true', data-id=competition._id)
-//-       //-   | &nbsp; Report competition
