--- a/views/competitions/_answer.pug
+++ b/views/competitions/_answer.pug
@@ -8,10 +8,10 @@
         | 
         | Like
     .number
-      span.number.num-Unlikes= answer.numUnLikes
+      span.number.num-Unlikes= answer.numunLikes
     .button
       a.like.answer-unlike-btn(href='#', data-id=answer.id)
-        i.fa.fa-thumbs-up
+        i.fa.fa-thumbs-down
         | 
         | UnLike
 
