--- a/views/competitions/_competition.pug
+++ b/views/competitions/_competition.pug
@@ -7,6 +7,7 @@
   .col-sm
     .numbers.
       #[span.number.num-likes= competition.numLikes] likes,
+      #[span.number.num-unlikes= competition.numunLikes] unlikes,
       #[span.number.num-answers= competition.numAnswers] answers,
       #[span.number.num-reads= competition.numReads] reads
   .col-sm
