--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -5,11 +5,10 @@
       h2 Competition Collection 
     p.card-text
     .care.text-white
-      | Tel.02-xxxx-xxxx
+      | All rights reserved. &copy;
       br
-      |CEO yuri Lee
+      | 2018 yurilee
       br
-      |&copy;
     br
     
 
