--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -1,5 +1,15 @@
 extends ../layout
 
+//- pug의 특징
+//- #id, .class, |plaintext, = 값,
+//- -code, +mixin, (attributes)
+//- #{string interpolation} div(tag="", interpolatin="")
+//- include: 다른 template 삽입
+//- extends: 확장 (layout용으로 많이 사용)
+//- if ... else if ... else ...
+//- case .when.default
+//- each .. in : 분기 
+
 block content
   .container
     h1.main-title Manage Users
