--- a/views/users/show.pug
+++ b/views/users/show.pug
@@ -3,8 +3,11 @@ include ../includes/_paginate
 
 block content
   .container
-    h1.main-title= users.name
-    //- h1.main-title= user.name
+    h1.main-title My Profile
+    h2.title= users.name
+    |
+    br
+    |
           
     dl.row
       dt.col-sm-3 Email
