--- a/views/competitions/manage.pug
+++ b/views/competitions/manage.pug
@@ -1,4 +1,5 @@
 extends ../layout
+include ../includes/_paginate
 
 block content
   .container
@@ -8,6 +9,7 @@ block content
       thead
         tr
           th Title
+          th
           th Created At
           th
       tbody
@@ -29,4 +31,35 @@ block content
     br
     |
     br  
+
+    h1.main-title Option Competitions
+
+    table.table.table-hover
+      thead
+        tr
+          th Field
+          th
+          th Created At
+          th
+      tbody
+        each competition in competitions
+          tr
+            td
+              a(href=`/competitions/${competition._id}` style='color: brown')= competition. field
+            td= competition.email
+            td= moment(competition.createdAt).format('YYYY-MM-DD HH:mm:ss')
+            td
+              a.btn.btn-sm.btn-outline-secondary(href=`/competitions/${competition._id}/edit`) 
+                | #[i.fas.fa-edit] Edit
+              | 
+              a.btn.btn-sm.need-confirm-btn.btn-outline-danger(href=`/competitions/${competition._id}?_method=DELETE`)
+                | #[i.fa.fa-trash] Delete
+  
+    //- a.btn.btn-warning(href='/competitions/new' style='color: white') #[i.fa.fa-plus] Register a new competition
+    |
+    br
+    |
+    br  
+
+
 
